# removebg_infusiblecoder

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  LICENSE.txt  MANIFEST.in  README.md  _build-exe.ps1  _setup.iss  build-exe  build_docker.bat  cog.yaml  docker-compose.cpu.yml  docker-compose.cuda.yml  predict.py  push_to_github_and publish.bat  push_to_github_only.bat  pypi token.txt  pyproject.toml  removebg_infusiblecoder.py  removebg_infusiblecoder.spec  requirements-gpu.txt  requirements.txt  setup.cfg  setup.py  test.bat  test.py  upload to pypitest.txt
.cog/: openapi_schema.json
.cog/tmp/build3369899905/: requirements.txt
.cog/tmp/build810240390/: cog-0.0.1.dev-py3-none-any.whl  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint_python.yml  publish_docker.yml  publish_docker_cuda.yml  publish_pypi.yml  test-install.yml  test_install.yml  windows_installer.yml
removebg_infusiblecoder/: __init__.py  _version.py  bg.py  cli.py  session_cloth.py  session_dis.py  session_factory.py  session_modnet.py
removebg_infusiblecoder/commands/: s_command.py
removebg_infusiblecoder/sessions/: __init__.py  carvekit.py  dis_anime.py  dis_general_use.py  sam.py  silueta.py  u2net.py  u2net_cloth_seg.py  u2net_human_seg.py  u2netp.py
tests/: test_remove.py
