[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "removebg_infusiblecoder/_version.py"
versionfile_build = "removebg_infusiblecoder/_version.py"
tag_prefix = "v"
parentdir_prefix = "removebg_infusiblecoder-"